# clawd-reachy-mini

./: .env.example  .gitignore  pyproject.toml
memory/: MEMORY.md
src/clawd_reachy_mini/: audio.py  config.py  gateway.py  interface.py  main.py  stt.py
